tests/tooling/fixtures/native/execution/positive/while_true_body_return_accept.objc3
module WhileTrueBodyReturnAccept;

fn main() -> i32 {
  while (true) {
    return 42;
  }
}
