tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_in_param_name_trailing_pure.objc3
module MisplacedQualifierInParamNameTrailingPure;

fn add(lhs: i32, pure: i32) -> i32;

fn main() -> i32 {
  return 0;
}
